--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-DATABASE_URL="postgresql+asyncpg://postgres.eahpjmicouzbkwiygcsq:AakashAashishroshan8692914734@aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres"
+DATABASE_URL="postgresql+asyncpg://postgres.wxkrsfimosbhtizpiqgy:p22MvTKYCzfv7IZb@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres"
 
-GEMINI_API_KEY="AIzaSyD2BNiAzMNdSLJWlmtqelIfD6bkoGPmEUI"
+
+GEMINI_API_KEY="AIzaSyBM6n8dJICktv-WNtKeV5lZRcC5eiWIebQ"
+"
