Replace sensitive data in .env with placeholder
Updated sensitive information in the .env file to placeholders for security.

--- a/backend-sentinel-ai/.env
+++ b/backend-sentinel-ai/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql+asyncpg://postgres.wxkrsfimosbhtizpiqgy:p22MvTKYCzfv7IZb@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgresql+asyncpg://postgres.<auto generated>:<your password>@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres"
 
 
-GEMINI_API_KEYS="AIzaSyBp8g3lK4E2Xofb6aeuR_SqkDbFBmtrbDY,AIzaSyC0Yx_x-Fy-neunsIWwiZnTZhyPbKTGoC0,AIzaSyA7nAqEKxIQ_CJ0Fd7V0lq5WhOm7SFe31Q,AIzaSyADdg08NTVq_o8CbFwmp9un6bOIbTjPQ9k,AIzaSyB1xLl3oiN4XRlyuR1CtzI9CK_xrzRPQL8,AIzaSyByvJo33pi0idl8JSQJfOUUkcny7dBVIAs,AIzaSyBDcnC3Xfa-cFiuoEMZrshPWYdsE9mzt9E,AIzaSyAm0Hf0kPvtvio1_5-g001Fem-sUFjTYg8,AIzaSyBHdeXHRXHIHlcXQvSSKoQqXP1kBJDahss,AIzaSyCsY7kVb_blXhlOplcbqZt3wD-FEYAbog0"
+GEMINI_API_KEYS="your api"
